--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <div class="text">
+            <h2>Welcome FooD PeeK</h2>
+            <h1>Different spice for different tastes</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa excepturi, quo delectus labore eum architecto</p>
+            <button>Order yours</button>
+        </div>
+
+        <div class="image">
+            <img src="assets/imagens/food.png" alt="food">
+        </div>
+    </main>
 </body>
 
+<!-- Site feito pelo canal DEV envolvente -->
 <!-- SDG -->
 </html>
